# httpy

./: .gitignore  README.md  setup.cfg
src/httpy/: server.py
src/httpy/templates/: index.html
src/pyserv/: server.py
src/pyserv/templates/: index.html
tests/: test_errors.py  test_server.py
