[metadata]
name = pyserv
version = 0.0.1
author = slime
description = HTTP Server that show an enhanced directory listing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    flask
	flask_httpauth
	werkzeug
package_dir = 
	= src
packages = find:
python_requires = >=3.6

[options.package_data]
pyserv = templates/*.html

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyserv = pyserv.server:run
